[gd_scene load_steps=3 format=3 uid="uid://dnkr0qercn1qi"]

[ext_resource type="Script" path="res://Scripts/shop_grid.gd" id="1_8q8tn"]
[ext_resource type="PackedScene" uid="uid://5oos01fy60ou" path="res://Scenes/tile_shop.tscn" id="2_ca2bs"]

[node name="world_buying_grid" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 170.0
offset_right = 170.0
offset_bottom = 150.0
script = ExtResource("1_8q8tn")

[node name="GridRight" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_direction = 2
layout_mode = 0
offset_left = -69.0
offset_top = 3.0
offset_right = 591.0
offset_bottom = 153.0
theme_override_constants/h_separation = 60
columns = 1024

[node name="tile_shop" parent="GridRight" instance=ExtResource("2_ca2bs")]
layout_mode = 2

[node name="GridLeft" type="GridContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_direction = 3
layout_mode = 0
offset_left = 271.0
offset_top = 3.0
offset_right = 931.0
offset_bottom = 153.0
theme_override_constants/h_separation = 60
columns = 1024

[node name="tile_shop2" parent="GridLeft" instance=ExtResource("2_ca2bs")]
layout_mode = 2

[node name="RightButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -130.0
offset_top = -56.0
offset_right = -80.0
offset_bottom = -6.0

[node name="LeftButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -281.0
offset_top = -58.0
offset_right = -231.0
offset_bottom = -8.0

[connection signal="pressed" from="RightButton" to="." method="_on_button_pressed" binds= [true]]
[connection signal="pressed" from="LeftButton" to="." method="_on_button_pressed" binds= [false]]
